--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.27.2",
     "formik": "^2.4.3",
     "framer-motion": "^10.16.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -34,6 +35,7 @@
     "recharts": "^2.8.0",
     "recharts-to-png": "^2.2.1",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.7.27",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
