--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -24,9 +24,11 @@
     "formik": "^2.4.3",
     "framer-motion": "^10.16.2",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
@@ -35,7 +37,7 @@
     "recharts": "^2.8.0",
     "recharts-to-png": "^2.2.1",
     "slick-carousel": "^1.8.1",
-    "sweetalert2": "^11.7.27",
+    "sweetalert2": "^11.7.28",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
