--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -30,7 +30,7 @@
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "6.4",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
