--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "6.4",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
     "recharts-to-png": "^2.2.1",
