--- a/projects/client/.env.development
+++ b/projects/client/.env.development
@@ -1,3 +1,3 @@
 PORT=3000
-REACT_APP_API_BASE_URL=http://localhost:8000/api
+REACT_APP_API_BASE_URL=https://jcwd011003.purwadhikabootcamp.com/api
 REACT_APP_BASE_URL=http://localhost:3000/
